Error message visibility now correctly toggles. Using JavaScript and a new "visible" class in the css.

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,16 +77,20 @@ button {
 }
 
 #search-error {
-  font-style: italic;
-  background-color: var(--accent-colour);
-  border-radius: 5px;
-  border: 2px solid white;
-
   padding: 0 .5rem;
   margin-bottom: 18px;
 
   width: fit-content;
-  height: 1.8rem;
+  min-height: 1.8rem;
+
+  box-sizing: border-box;
+}
+
+#search-error.visible {
+  font-style: italic;
+  background-color: var(--accent-colour);
+  border-radius: 5px;
+  border: 2px solid white;
 }
 
 /* CURRENT WEATHER */
